--- a/solarify/Pipfile
+++ b/solarify/Pipfile
@@ -1,11 +1,17 @@
 [[source]]
+name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-name = "pypi"
-
-[packages]
 
 [dev-packages]
 
+[packages]
+django = "*"
+psycopg2 = "==2.7.7"
+django-heroku = "*"
+gunicorn = "*"
+validate-email = "*"
+six = "*"
+
 [requires]
-python_version = "3.10"
+python_version = "3.7"
