--- a/solarify/.env-example
+++ b/solarify/.env-example
@@ -1,4 +1,4 @@
-export DB_NAME=<>
-export DB_USER=<>
-export DB_USER_PASSWORD=<>
-export DB_HOST=<>
+export DB_NAME= solarify_db
+export DB_USER= postgres
+export DB_USER_PASSWORD= Mayora1999
+export DB_HOST= localhost
